@@ -1,3 +1,13 @@
+2021-09-08  SiYu Wu  <siyu@isrc.iscas.ac.cn>
+
+	Backported from master:
+	2020-05-05  Jakub Jelinek  <jakub@redhat.com>
+
+ 	PR tree-optimization/94800
+ 	* match.pd (X + (X << C) to X * (1 + (1 << C)),
+ 	(X << C1) + (X << C2) to X * ((1 << C1) + (1 << C2))): New
+ 	canonicalizations.
+
 2020-07-23  Release Manager
 
 	* GCC 10.2.0 released.
